# vlet-1.5.0

./: .project  Makefile  README.txt  build.prop.in  build.xml  configure  configure.ac  project.prop
mbuild/: .cvsignore  .project  component.prop  configuration.xml  doComponent.xml  project.prop  vlemed.xml
mvnbuild/: local.prop
mvndistribution/: .project  pom.xml
source/core/nl.uva.vlet.auxlibs/: .classpath  .cvsignore  NOTES  build.xml
source/core/nl.uva.vlet.examples/: .project
source/core/nl.uva.vlet.glite.lfc/: .classpath  .project  pom.xml
source/core/nl.uva.vlet.grid.globus/: .classpath  .project  NOTES  build.prop  build.xml  pom.xml
source/core/nl.uva.vlet.gui.lobo.viewer/: .classpath  NOTES  pom.xml
source/core/nl.uva.vlet.gui.pedal/: .classpath  .project  build.xml
source/core/nl.uva.vlet.gui.utils/: .classpath  NOTES  build.prop  build.xml
source/core/nl.uva.vlet.gui.vbrowser/: build.prop  pom.xml
source/core/nl.uva.vlet.lbl.srm/: .classpath  .project  build.xml  build_srm_stubs.xml
source/core/nl.uva.vlet.vfs.gftp/: .classpath  .project  build.xml
source/core/nl.uva.vlet.vfs.irods/: .classpath  .project  build.prop  pom.xml
source/core/nl.uva.vlet.vfs.jcraft.ssh/: .classpath  .project  build.prop  pom.xml
source/core/nl.uva.vlet.vfs.lfc/: .classpath  .project  NOTES  build.xml  pom.xml
source/core/nl.uva.vlet.vfs.skelfs/: NOTES
source/core/nl.uva.vlet.vfs.srb/: .classpath
source/core/nl.uva.vlet.vfs.srm/: .classpath  .project  build.xml  pom.xml
source/core/nl.uva.vlet.vfs.webdav/: NOTES  (+3 more)
tags/vlet-1.5.0/: acinclude.m4
(+1308 files in other folders)
